--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/1.jpg">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Serena Cardenas - Communications</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Serena Cardenas</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/serenacardenas.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,31 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Serena Cardenas
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Communications</div>
+        <p class="lead mb-4">Hello! 
+        <br> My name is Serena Cardenas and I am an ambitious college student seeking an opportunity to represent your company. 
+        <br> With 4+ years of experience in customer service, I am highly efficient at working in a fast paced environment whilst dealing with a variety of customers on a day to day basis. 
+        <br>I hold cultural and linguistic knowledge in English, French, Spanish and Russian. When I am not working or studying, I love to travel to new countries and immerse myself in new cultures.
+        As a recent graduate, I pride myself on my strong work ethic, my trustworthiness, and my reliability when it comes to handling difficult tasks. 
+        <br><br><br>
 
-        Enter bio here<br><br>
+        <br><br>
 
-        Enter bio here
+        
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
+          <a target="_blank" href="https://www.linkedin.com/in/serena-cardenas-26984b87/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/SerenaCardenas">
             <i class="fab fa-github"></i>
           </a>
           <a target="_blank" href="https://twitter.com">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:scard023@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,52 +97,68 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Delivery Driver</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.doordash.com/">DoorDash</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Loaded, transported, and delivered items to clients in a safe, timely manner.<br> 
+              • Provided excellent customer service, answered questions, and handled complaints from clients<br>
+              • Maintained a safe and clean driving record<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">September 2018 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Barista</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.starbucks.com/">Starbucks Coffee Co.</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Educated customers by presenting and explaining the coffee drink menu; answering questions.<br>
+              • Prepared and sold coffee drinks by following prescribed recipes and preparation techniques<br>
+              • Welcomed customers by determining their coffee-related interests and needs.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">March 2016 - July 2018</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Hostess</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.applebees.com/en">Applebee's Bar and Grille</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Greeted incoming and departing Guests with a smile and eye contact<br>
+            • Escorted them to assigned dining area; presented menus; announced waiter's name.<br>
+            • Managed the flow of Guests into the Dining and Bar areas and provided accurate wait times<br>
+            • Observant to Guests’ needs throughout dining experience to ensured they received high quality service.<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">March 2015 - May 2016</span>
           </div>
         </div>
 
-
+ <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Voulenteer/Aide</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.corrilavita.it/en/">Corri la Vita - Firenze, Italy</a></div>
+            <p>
+              • Assisted in the set up and break down of the Corri la Vita main event<br>
+              • Prepared and disbursed fruit, food, and drinks to participants<br>
+              • Asssisted in the aide of runners and ensured their wellbeing by monitoring fluid intake<br>
+              • Prepared a scientific essay regarding the ongoing spread of Breast Cancer throughout Italy <br>
+              • Used research gathered from the "Corri la Vita" to bring awareness to Breast Cancer fundraising<br>
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2014 - December 2014</span>
+          </div>
+        </div>
 
       </div>
 
@@ -152,33 +173,34 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">BA in Sociology</div>
+            <div>Sociology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2018 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">Hope International University</h3>
+            <div class="subheading mb-3">BA in Communication Studies</div>
+            <div>International Communication</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2017</span>
           </div>
         </div>
+        
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <h3 class="mb-0">Riverside City College</h3>
+            <div class="subheading mb-3">A.A. in Communication Studies, Mass Media</div>
+            <div>Communication and Foreign Language, Media Studies</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2012 - June 2016</span>
           </div>
         </div>
 
@@ -191,7 +213,8 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/Bulb.jpg" width="500px"> <img src="img/me.png" width="500px"><br>
+            <img src="img/set.jpg" width="500px"><img src="img/News.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +222,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Serena Cardenas</center><br>
 
 
   </div>
